fix: dropdown z-index

--- a/src/styles/Dropdown.scss
+++ b/src/styles/Dropdown.scss
@@ -51,7 +51,7 @@
 
   &__drop {
     position: absolute;
-    z-index: 5;
+    z-index: 999;
     display: none;
     width: 100%;
     background: #fff;
